<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="344dp"
            android:layout_height="144dp"
            app:srcCompat="@drawable/gasoalcol"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
/>
    <TextView android:layout_width="344dp"
              android:layout_height="wrap_content"
              android:id="@+id/imgInfo"
              android:text="@string/strInfoImg"
              android:textSize="14sp"
              app:layout_constraintTop_toBottomOf="@+id/imageView"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="8dp"/>

    <TextView android:layout_width="344dp"
              android:layout_height="wrap_content"
              android:id="@+id/strAlcool"
              android:text="@string/strAlcool"
              android:textSize="13sp"
              app:layout_constraintTop_toBottomOf="@+id/imgInfo"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="12dp"


    />

    <EditText android:layout_width="344dp"
              android:layout_height="wrap_content"
              android:id="@+id/inputAlcool"
              android:ems="13"
              app:layout_constraintTop_toBottomOf="@+id/strAlcool"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="6dp"
              android:hint="@string/hintAlcool"
              android:autofillHints="@string/hintAlcool"

    />

    <TextView android:layout_width="344dp"
              android:layout_height="wrap_content"
              android:id="@+id/strGasolina"
              android:text="@string/strGasolina"
              android:textSize="13sp"
              app:layout_constraintTop_toBottomOf="@+id/inputAlcool"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="6dp"


    />

    <EditText android:layout_width="344dp"
              android:layout_height="wrap_content"
              android:id="@+id/inputGasolina"
              android:ems="13"
              app:layout_constraintTop_toBottomOf="@+id/strGasolina"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginTop="6dp"
              android:hint="@string/hintGasolina"
              android:autofillHints="@string/hintGasolina"


    />

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCalcular"
            android:text="@string/btnCalcular"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputGasolina"
            android:layout_marginTop="8dp"


    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/strResultado"
              android:textSize="15sp"
              android:text="@string/strResultado"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/btnCalcular"
              android:layout_marginTop="4dp"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginBottom="60dp"

    />


</androidx.constraintlayout.widget.ConstraintLayout>